Test/errors/err_guarded_field_no_release.cb
import "atomic.cb";

struct SharedData {
    atomic__i32 ready = default;
    lock(ready) {
        int value = 0;
    }
};

extern int main()
{
    expect_error("Field 'value' is guarded by 'ready'");
    SharedData s;
    s.value = 42;
}
